--- a/notebooks/leaky_data_search.ipynb
+++ b/notebooks/leaky_data_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,20 +13,10 @@
     "import numpy as np\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.feature_extraction.text import TfidfTransformer, TfidfVectorizer\n",
-    "from sklearn.dummy import DummyClassifier\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.pipeline import Pipeline\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "import seaborn as sn\n",
-    "from wordcloud import WordCloud, STOPWORDS\n",
-    "from string import punctuation\n",
-    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
-    "import pickle\n",
-    "import re\n",
-    "from joblib import dump, load\n",
     "import lime\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "from lime import lime_tabular\n",
     "from lime import submodular_pick"
    ]
@@ -208,27 +198,6 @@
     "        else:\n",
     "            ohe.append(0)\n",
     "    return np.array(ohe)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['notice. broke jail. in zebulon pike county on the 18th of this instant a white man by the name of daniel maroney and a negro man by the name of jacob belonging to william sandford of baldwin county. the white man is about 6 feet 2 or 3 inches high stout built and fair skin between 35 and 40 years of age had on when he left a blue dress coat with large gilt buttons and a silk hat inclined to be a bell crown and dark satinet pantaloons and a silk velvet vest the man was confined in jail for the offense of stealing negroes. will give a reward of 20 dollars for the apprehension of the said man and boy if lodged in any jail as i get them again or delivered to me in zebulon or 10 dollars for either of them.  joseph  h. shivers  november 20 1838.        23-4t editors with whom we exchange will promote the ends of justice by giving the above 3 or 4 insertions. ',\n",
-       "       1], dtype=object)"
-      ]
-     },
-     "execution_count": 117,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "balanced_df.iloc[246].values"
    ]
   },
   {
@@ -584,7 +553,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x = df.text\n",
@@ -595,7 +566,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tfidf = TfidfVectorizer(stop_words='english', min_df = 150)\n",
@@ -37785,12 +37758,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'submodular_pick' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/6b/dk_5jm6j5td5qwtztc6_vc7c0000gn/T/ipykernel_99357/1172089156.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m sp_obj = submodular_pick.SubmodularPick(explainer, train_df.values,\n\u001b[0m\u001b[1;32m      2\u001b[0m                                         model.predict_proba, sample_size=20, num_features=25, num_exps_desired=5)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'submodular_pick' is not defined"
+     ]
+    }
+   ],
    "source": [
     "sp_obj = submodular_pick.SubmodularPick(explainer, train_df.values,\n",
-    "                                        model.predict_proba, sample_size=20, num_features=10, num_exps_desired=5)"
+    "                                        model.predict_proba, sample_size=20, num_features=25, num_exps_desired=5)"
    ]
   },
   {
